Fixed CSS - alignment + vertical scroll

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -3,7 +3,6 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 6rem;
   min-height: 100vh;
   background-image: linear-gradient(to bottom right, yellow, red);
   width: 100vw;
