--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -1,6 +1,7 @@
 .nav {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
   background-color: orangered;
   width: 100vw;
   position: fixed;
